--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.7",
+    "@web/dev-server": "^0.1.29",
     "parcel-bundler": "^1.12.4",
     "typescript": "^4.5.3"
+  },
+  "dependencies": {
+    "flatpickr": "^4.6.9"
   }
 }
